syntax = "proto3";

package authService;

import "google/protobuf/timestamp.proto";

option go_package = "./;authpb";

message User {
    int32 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string image = 5;
    google.protobuf.Timestamp created_at = 6;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

service AuthService {
    rpc GetUserById (GetUserRequest) returns (GetUserResponse);
}